@@ -3,6 +3,7 @@ This is a list of changes in pygame's history.
      Nov 14, 2000
 	Release the Python Global Interpreter Lock on delays and IO
 	Added timer events to pygame.time (vgrade example demonstrates)
+	New music playback finished events
 	Documentation reorganized, 1st tutorial added
 	surfarray.blit_array() supports all bit depths
 
